--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ h1, h2, p {
   Projects
 *********************************/
 .projects-container {
-  /*display: none;*/
+  display: none;
   text-align: center;
 }
 
